Fixed z-index

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -121,7 +121,7 @@ nav a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 3;
+  z-index: 1;
   position: relative;
 }
 
